# template-repo

./: .env.dev  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config.yaml
config/hydra/log_logging/: custom.yaml
docker/: Dockerfile  devcontainer.json  docker-compose.yaml
