[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "3.11"
torch = {version = "^2.3.0+cu118", source = "pytorch_gpu_cuda_11_8"}
torchvision = {version = "^0.18.0+cu118", source = "pytorch_gpu_cuda_11_8"}
ultralytics = "^8.2.2"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
pydantic = "^2.7.1"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.10.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_gpu_cuda_11_8"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.black]
line-length = 140


[tool.isort]
py_version = 311
line_length = 140


[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", ".vevn"]
max-complexity = 8
per-file-ignores = [
    '__init__.py:F401',
]


[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = 'attr-defined,no-untyped-call'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"